data/derived/comb/progs/unify/prog6222.ml.out
Characters 212-224:
  | []-> (sum/10)::(sum mod 10)
                   ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
